# QNN

./: .gitignore  GEMINI.md  LICENSE  README.md  aufgabeliste.md  aufgabeliste_thermal.md  pyproject.toml  requirements.txt  weights.json
.github/workflows/: ci.yml
configs/: example.yaml  weights.example.json
docs/: PROBLEM_FORMULATION.md  REFERENCES.md
qnn/: circuits.py  cli.py  config.py  data.py  io.py  metrics.py  models.py  noise.py  observables.py  planning.py  preprocess.py  spec.py  thermal_adapter.py  transpile.py  vqa.py
scripts/: __init__.py  demo_amplitude_sim.py  demo_angle_sim.py  demo_greeting_router.py  demo_image_angle.py  demo_kernel_grid.py  demo_measurements.py  demo_noise_angle.py  demo_phase_sim.py  demo_preprocess.py  demo_reupload_classifier.py  demo_thermal_mlp.py  demo_transpile_angle.py  demo_vqa_spsa.py  eval_classifier.py  hw_transpile_summary.py  intent_router.py  make_greeting_dataset.py  make_vector_spec.py  nn2qnn_init.py  ollama_embeddings.py  plot_sweeps.py  predict_reupload_classifier.py  run_all.py  run_intent_offline.py  smoke_validate_spec.py  sweep_alpha_L.py  sweep_noise.py  test_determinism.py  test_global_annealing.py  test_preprocess.py  test_scalability.py  test_sparsity.py  test_thermal_adapter.py  test_thermal_attention.py  test_thermal_attention_correctness.py  test_thermal_attention_perf.py  test_thermal_linear.py  test_thermal_linear_fidelity.py  test_training.py  (+1 more)
specs/: tensor_spec.yaml  tensor_spec_from_ollama.yaml  tensor_spec_ollama.yaml
tests/: test_config.py  test_metrics.py  test_models.py  test_pipeline.py
thermal_experiments/: attention_energy.py  demo_ising.py  linear_layer_rbm.py
